@@ -3,7 +3,8 @@
 ## case~exposure+strata(matching)
 ##
 
-clogit<-function(formula,data,method=c("exact","approximate"),
+clogit<-function(formula,data,
+                 method=c("exact","approximate", "efron", "breslow"),
                  na.action=getOption("na.action"),subset=NULL,
                  control=coxph.control()){
     
@@ -21,10 +22,13 @@ clogit<-function(formula,data,method=c("exact","approximate"),
     coxcall<-match.call()
     coxcall[[1]]<-as.name("coxph")
     newformula<-formula
-    newformula[[2]]<-substitute(Surv(rep(1,nn),case),list(case=formula[[2]],nn=nrows))
+    newformula[[2]]<-substitute(Surv(rep(1,nn),case),
+                                list(case=formula[[2]],nn=nrows))
     environment(newformula)<-environment(formula)
     coxcall$formula<-newformula
-    coxcall$method<-switch(match.arg(method),exact="exact","breslow")
+    coxcall$method <- switch(match.arg(method),exact="exact",
+                                               efron="efron",
+                             "breslow")
 
     coxcall<-eval(coxcall,sys.frame(sys.parent()))
     coxcall$userCall<-sys.call()
